--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bytemuck = "1.14.1"
 image = "0.24.8"
 once_cell = "1.19.0"
+threadpool = "1.8.1"
 vulkano = "0.34.1"
 vulkano-shaders = "0.34.0"
 winit = "0.28.0"
